docs/v3.8.0rc1/_sources/gallery/extras/HG11.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/HG11.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_HG11.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_HG11.py:


Hermite-Gauss 31 Mode Detector
==============================

This example demonstrates the initialization and visualization of HG31 Mode detector using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-15

.. code-block:: Python

    from TypedUnit import ureg

    from PyMieSim.single.detector import CoherentMode
    from PyMieSim.single import plot_system








.. GENERATED FROM PYTHON SOURCE LINES 16-17

Initializing the detector

.. GENERATED FROM PYTHON SOURCE LINES 17-26

.. code-block:: Python

    detector = CoherentMode(
        mode_number="HG31",  # Specifying HG31 mode
        sampling=500 * ureg.AU,  # Number of sampling points
        NA=0.5 * ureg.AU,  # Numerical Aperture
        gamma_offset=0 * ureg.degree,  # Gamma offset
        phi_offset=40 * ureg.degree,  # Phi offset in degrees
        rotation=0 * ureg.degree,
    )








.. GENERATED FROM PYTHON SOURCE LINES 27-28

Plotting the detector

.. GENERATED FROM PYTHON SOURCE LINES 28-29

.. code-block:: Python

    plot_system(detector)



.. image-sg:: /gallery/extras/images/sphx_glr_HG11_001.png
   :alt: HG11
   :srcset: /gallery/extras/images/sphx_glr_HG11_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.285 seconds)


.. _sphx_glr_download_gallery_extras_HG11.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: HG11.ipynb <HG11.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: HG11.py <HG11.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: HG11.zip <HG11.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
